--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     
                     <div class="bg-white rounded-lg shadow-lg p-6">
                         <h3 class="text-xl font-bold text-secondary mb-2">Linear Speed (v)</h3>
-                        <p class="text-2xl font-mono bg-gray-100 p-3 rounded">v = $\pi$ * D * (RPM / 60)</p>
+                        <p class="text-2xl font-mono bg-gray-100 p-3 rounded">v = &#960; * D * (RPM / 60)</p>
                         <ul class="mt-3 list-disc list-inside text-gray-700">
                             <li><span class="font-bold">D:</span> Wheel Diameter (m)</li>
                             <li><span class="font-bold">RPM:</span> Motor Rotations / Minute</li>
@@ -191,10 +191,10 @@
 
                     <div class="bg-white rounded-lg shadow-lg p-6">
                         <h3 class="text-xl font-bold text-secondary mb-2">Motor Power (P)</h3>
-                        <p class="text-2xl font-mono bg-gray-100 p-3 rounded">P = T * $\omega$</p>
+                        <p class="text-2xl font-mono bg-gray-100 p-3 rounded">P = T * &#969;</p>
                         <ul class="mt-3 list-disc list-inside text-gray-700">
                             <li><span class="font-bold">T:</span> Torque (N·m)</li>
-                            <li><span class="font-bold">$\omega$:</span> Angular Speed (rad/s)</li>
+                            <li><span class="font-bold">&#969;:</span> Angular Speed (rad/s)</li>
                         </ul>
                     </div>
 
